--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-error-sooner: #AB1E09;
 }
 
 :root {
